--- a/millionaire/src/App.module.css
+++ b/millionaire/src/App.module.css
@@ -10,5 +10,7 @@ body {
 .App {
   width: 900px;
   height: 600px;
-  background-color: rgb(0, 0, 205);
+  background-color: rgb(0, 0, 158);
+  box-sizing: border-box;
+  padding: 15px;
 }
