--- a/millionaire/src/App.module.css
+++ b/millionaire/src/App.module.css
@@ -13,4 +13,15 @@ body {
   background-color: rgb(0, 0, 158);
   box-sizing: border-box;
   padding: 15px;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 600px 1fr;
+  height: 400px;
+  gap: 10px;
 }
