--- a/millionaire/src/components/QuestionField/index.module.css
+++ b/millionaire/src/components/QuestionField/index.module.css
@@ -1,6 +1,5 @@
 .QuestionField {
-  width: 600px;
-  height: 400px;
   border-radius: 20px;
   border: 5px solid rgb(9, 87, 255);
+  height: 100%;
 }
