Updated question answer buttons

--- a/millionaire/src/App.module.css
+++ b/millionaire/src/App.module.css
@@ -22,6 +22,11 @@ body {
   height: 100%;
   display: grid;
   grid-template-columns: 600px 1fr;
-  height: 400px;
+  gap: 10px;
+}
+
+.contentLeft {
+  display: grid;
+  grid-template-rows: 400px 1fr;
   gap: 10px;
 }
