--- a/millionaire/src/components/QuestionButtons/QuestionButton/index.module.css
+++ b/millionaire/src/components/QuestionButtons/QuestionButton/index.module.css
@@ -2,5 +2,13 @@
   border: 1px solid white;
   display: flex;
   align-items: center;
-  justify-content: center;  
+  justify-content: center;
+  border-radius: 10px;
+  border: 5px solid rgb(9, 87, 255);
+  background: none;
+  cursor: pointer;
+}
+
+.QuestionButton:hover {
+  background: yellow;
 }
