Updated typography design

--- a/millionaire/src/components/QuestionButtons/QuestionButton/index.module.css
+++ b/millionaire/src/components/QuestionButtons/QuestionButton/index.module.css
@@ -1,5 +1,7 @@
 .QuestionButton {
   border: 1px solid white;
+  color: white;
+  font-weight: 700;
   display: flex;
   align-items: center;
   justify-content: center;
