--- a/millionaire/src/components/QuestionField/index.module.css
+++ b/millionaire/src/components/QuestionField/index.module.css
@@ -1,4 +1,12 @@
 .QuestionField {
   border-radius: 20px;
   border: 5px solid rgb(9, 87, 255);
+  box-sizing: border-box;
+  padding: 20px;
+}
+
+.QuestionFieldText {
+  color: white;
+  font-size: 20px;
+  margin: 10px 0 10px 0;
 }
