--- a/millionaire/src/components/QuestionButtons/QuestionButton/index.module.css
+++ b/millionaire/src/components/QuestionButtons/QuestionButton/index.module.css
@@ -4,7 +4,7 @@
   font-weight: 700;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   border-radius: 10px;
   border: 5px solid rgb(9, 87, 255);
   background: none;
@@ -13,4 +13,23 @@
 
 .QuestionButton:hover {
   background: yellow;
+}
+
+.QuestionButtonCircle {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: orange;
+  margin-right: 7px;
+}
+
+.QuestionButtonText {
+  margin: 0;
+  font-weight: 100;
+  font-size: 17px;
+}
+
+.QuestionButtonLetter {
+  color: orange;
+  font-weight: 900;
 }
