--- a/millionaire/src/components/Header/index.module.css
+++ b/millionaire/src/components/Header/index.module.css
@@ -1,5 +1,28 @@
 .Header {
   width: 100%;
   height: 70px;
-  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Header > h1 {
+  text-transform: uppercase;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 700;
+  font-size: 30px;
+  margin: 0 0 10px 0;
+
+  background: linear-gradient(
+    125deg,
+    rgb(56, 56, 240) 0%,
+    rgb(179, 153, 250) 50%,
+    rgb(255, 255, 255) 100%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  
+  filter: drop-shadow(4px 4px black);
+  position: relative;
 }
